next and old button fixed on small screen

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -322,7 +322,7 @@ a:hover {
         font-size: 0.8em;
     }
     .pager a {
-        width: 50%;
+        width: 50% !important;
     }
 }
 
